--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oooh+Baby&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Carter+One&family=Oooh+Baby&family=Vujahday+Script&display=swap');
 
 :root {
     --background: #e3e7ec;
@@ -9,9 +9,11 @@
     --dark-txt: #2a2a2a;
 
     --size-heading: 5vmax;
-    --size-text: 1.12vmax;
-    --size-button: 26px;
-    --size-info: 22px;
+    --size-footers: 1.1125vmax;
+    --size-button: 1.25vmax;
+
+    --size-form-intro: 1.6vmin;
+    --size-form-cta: 3vmin;
 }
 
 *,
@@ -32,19 +34,18 @@ body {
     background: var(--background);
     color: var(--dark-txt);
     font-family: Lato, sans-serif;
-    font-size: var(--size-text);
 }
 
 button {
-    width: 80px;
-    height: 80px;
+    width: 12vw;
+    height: 4vh;
     cursor: pointer;
     text-decoration: none;
     border: none;
     outline: none;
-    border-radius: 5%;
+    border-radius: 0.5rem;
     background-color: var(--btn-orange);
-    color: var(--light-txt);
+    color: var(--dark-txt);
     font-size: var(--size-button);
     font-weight: 700;
     box-shadow: 0 0 2px 1px rgba(196, 196, 196, 0.2);
@@ -119,16 +120,56 @@ a {
     gap: 4px;
 }
 
+.imgAttribution, .footer {
+    font-size: var(--size-footers);
+}
+
 .right {
     width: 60vw;
+
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.leftSpace {
+    padding-left: 1.75vw;
+}
+
+.rightSpace {
+    padding-right: 0.5vw;
 }
 
 .loginText a {
     color: var(--dark-txt);
 }
 
+.formIntro {
+    margin-top: 10vh;
+}
+
+.formIntro .info {
+    font-size: var(--size-form-intro);
+    font-weight: 900;
+    font-family: 'Carter One', cursive;
+}
+
+.formIntro .cta {
+    font-size: var(--size-form-cta);
+    font-weight: 700;
+    font-family: 'Vujahday Script', cursive;
+
+    margin-top: 2vh;
+}
+
+.formBody {
+
+}
+
 .footer {
     display: flex;
     justify-content: center;
     padding: 10px;
+
+    margin-top: 28vh;
+    background-color: rgba(253, 154, 100, 0.6);
 }
